// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountInput Snapshots Label 1`] = `
<div
  className="sc-AxheI jmeqRy"
>
  <label
    className="sc-AxjAm hjwNwx sc-AxgMl cxJYYh"
    htmlFor="wegwf"
  >
    Balance
    
  </label>
  
  <input
    autoFocus={null}
    className="sc-Axmtr bDDSAq"
    disabled={false}
    hidden={false}
    id="wegwf"
    name={null}
    onBlur={null}
    onChange={null}
    onKeyDown={null}
    placeholder={null}
    style={null}
    type="tel"
  />
</div>
`;

exports[`AccountInput Snapshots No props 1`] = `
<div
  className="sc-AxheI jmeqRy"
>
  
  
  <input
    autoFocus={null}
    className="sc-Axmtr bDDSAq"
    disabled={false}
    hidden={false}
    id="wegwf"
    name={null}
    onBlur={null}
    onChange={null}
    onKeyDown={null}
    placeholder={null}
    style={null}
    type="tel"
  />
</div>
`;

exports[`AccountInput Snapshots Type 1`] = `
<div
  className="sc-AxheI jmeqRy"
>
  
  
  <input
    autoFocus={null}
    className="sc-Axmtr bDDSAq"
    disabled={false}
    hidden={false}
    id="wegwf"
    name={null}
    onBlur={null}
    onChange={null}
    onKeyDown={null}
    placeholder={null}
    style={null}
    type="text"
  />
</div>
`;
